// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hello GraphQL Hello World Not Value Output 1`] = `
Object {
  "result": "Hello World",
}
`;

exports[`Hello GraphQL Hello World Using Value Output 1`] = `
Object {
  "result": "Hello Eliane.Mueller",
}
`;
